--- a/PlasmaTrimAPI/PlasmaTrimAPI.csproj
+++ b/PlasmaTrimAPI/PlasmaTrimAPI.csproj
@@ -49,8 +49,8 @@
   <ItemGroup>
     <Compile Include="PlasmaTrimController.cs" />
     <Compile Include="PlasmaTrimEnumerator.cs" />
-    <Compile Include="PlasmaTrimTiming.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SequenceFile.cs" />
     <Compile Include="SequenceStep.cs" />
   </ItemGroup>
   <ItemGroup>
