--- a/PlasmaTrimAPI/PlasmaTrimAPI.csproj
+++ b/PlasmaTrimAPI/PlasmaTrimAPI.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PlasmaTrimController.cs" />
+    <Compile Include="PlasmaTrimTiming.cs" />
     <Compile Include="PlasmaTrimEnumerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SequenceFile.cs" />
