Rework using cross platform HID library

--- a/PlasmaTrimAPI/PlasmaTrimAPI.csproj
+++ b/PlasmaTrimAPI/PlasmaTrimAPI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="hidlibrary" Version="3.3.40" />
+    <PackageReference Include="HidSharp" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
